k8s/espocrm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: espocrm-ingress
  namespace: espocrm
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: public
  rules:
    - host: crm.sastaspace.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: espocrm
                port:
                  number: 80
